<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="org.csystem.android.app.multipleactivity.viewmodel.LoginActivityListenersViewModel"/>
        <import type="org.csystem.android.app.multipleactivity.viewmodel.LoginInfo"/>
        <variable name="viewModel" type="LoginActivityListenersViewModel" />
        <variable name="loginInfo" type="LoginInfo" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".PaymentActivity">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="@={loginInfo.username}"
            android:hint="@string/edittext_username_hint"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:text="@={loginInfo.password}"
            android:hint="@string/edittext_password_hint"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_login_text"
            android:onClick="@{() -> viewModel.handleLoginButton()}"/>
    </LinearLayout>
</layout>
